--- a/index.html
+++ b/index.html
@@ -1663,6 +1663,11 @@
     </div>
 
     <script>
+        // Helper function to properly handle UTF-8 characters with btoa
+        function utf8ToBase64(str) {
+            return btoa(unescape(encodeURIComponent(str)));
+        }
+
         // App state
         const state = {
             currentUser: null,
@@ -2059,7 +2064,7 @@
                         },
                         body: JSON.stringify({
                             message: 'Initial data',
-                            content: btoa(JSON.stringify(initialData[key.toLowerCase()], null, 2))
+                            content: utf8ToBase64(JSON.stringify(initialData[key.toLowerCase()], null, 2))
                         })
                     });
 
@@ -2252,11 +2257,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.DRIVERS,
                     modalTitle === 'Add Driver' ? 'Add driver' : 'Update driver',
-                    btoa(JSON.stringify(drivers, null, 2))
+                    utf8ToBase64(JSON.stringify(drivers, null, 2))
                 );
 
                 // Update local state
@@ -2339,11 +2344,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.CARS,
                     modalTitle === 'Add Car' ? 'Add car' : 'Update car',
-                    btoa(JSON.stringify(cars, null, 2))
+                    utf8ToBase64(JSON.stringify(cars, null, 2))
                 );
 
                 // Update local state
@@ -2409,11 +2414,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.CARDS,
                     modalTitle === 'Add Card' ? 'Add card' : 'Update card',
-                    btoa(JSON.stringify(cards, null, 2))
+                    utf8ToBase64(JSON.stringify(cards, null, 2))
                 );
 
                 // Update local state
@@ -2508,11 +2513,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.TENDERS,
                     modalTitle === 'Add Tender' ? 'Add tender' : 'Update tender',
-                    btoa(JSON.stringify(tenders, null, 2))
+                    utf8ToBase64(JSON.stringify(tenders, null, 2))
                 );
 
                 // Update local state
@@ -2585,11 +2590,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.INVOICES,
                     modalTitle === 'Add Invoice' ? 'Add invoice' : 'Update invoice',
-                    btoa(JSON.stringify(invoices, null, 2))
+                    utf8ToBase64(JSON.stringify(invoices, null, 2))
                 );
 
                 // Update local state
@@ -2668,11 +2673,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.USERS,
                     modalTitle === 'Add User' ? 'Add user' : 'Update user',
-                    btoa(JSON.stringify(users, null, 2))
+                    utf8ToBase64(JSON.stringify(users, null, 2))
                 );
 
                 // Update local state
@@ -2729,11 +2734,11 @@
                     });
                 }
 
-                // Save to GitHub
+                // Save to GitHub - FIXED HERE
                 await updateFile(
                     FILE_PATHS.STATUSES,
                     modalTitle === 'Add Status' ? 'Add status' : 'Update status',
-                    btoa(JSON.stringify(statuses, null, 2))
+                    utf8ToBase64(JSON.stringify(statuses, null, 2))
                 );
 
                 // Update local state
@@ -2760,7 +2765,7 @@
                 await updateFile(
                     FILE_PATHS.DRIVERS,
                     'Delete driver',
-                    btoa(JSON.stringify(drivers, null, 2))
+                    utf8ToBase64(JSON.stringify(drivers, null, 2))
                 );
 
                 state.drivers = drivers;
@@ -2784,7 +2789,7 @@
                 await updateFile(
                     FILE_PATHS.CARS,
                     'Delete car',
-                    btoa(JSON.stringify(cars, null, 2))
+                    utf8ToBase64(JSON.stringify(cars, null, 2))
                 );
 
                 state.cars = cars;
@@ -2808,7 +2813,7 @@
                 await updateFile(
                     FILE_PATHS.CARDS,
                     'Delete card',
-                    btoa(JSON.stringify(cards, null, 2))
+                    utf8ToBase64(JSON.stringify(cards, null, 2))
                 );
 
                 state.cards = cards;
@@ -2832,7 +2837,7 @@
                 await updateFile(
                     FILE_PATHS.TENDERS,
                     'Delete tender',
-                    btoa(JSON.stringify(tenders, null, 2))
+                    utf8ToBase64(JSON.stringify(tenders, null, 2))
                 );
 
                 state.tenders = tenders;
@@ -2856,7 +2861,7 @@
                 await updateFile(
                     FILE_PATHS.INVOICES,
                     'Delete invoice',
-                    btoa(JSON.stringify(invoices, null, 2))
+                    utf8ToBase64(JSON.stringify(invoices, null, 2))
                 );
 
                 state.invoices = invoices;
@@ -2880,7 +2885,7 @@
                 await updateFile(
                     FILE_PATHS.USERS,
                     'Delete user',
-                    btoa(JSON.stringify(users, null, 2))
+                    utf8ToBase64(JSON.stringify(users, null, 2))
                 );
 
                 state.users = users;
@@ -2904,7 +2909,7 @@
                 await updateFile(
                     FILE_PATHS.STATUSES,
                     'Delete status',
-                    btoa(JSON.stringify(statuses, null, 2))
+                    utf8ToBase64(JSON.stringify(statuses, null, 2))
                 );
 
                 state.statuses = statuses;
@@ -3442,11 +3447,11 @@
             const revenueCtx = document.getElementById('revenue-chart').getContext('2d');
             new Chart(revenueCtx, {
                 type: 'line',
-                data: {
+                 {
                     labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
                     datasets: [{
                         label: 'Revenue',
-                        data: [12000, 19000, 15000, 20000, 25000, 30000, 35000, 40000, 38000, 36000, 32000, 45000],
+                         [12000, 19000, 15000, 20000, 25000, 30000, 35000, 40000, 38000, 36000, 32000, 45000],
                         borderColor: '#e74c3c',
                         backgroundColor: 'rgba(231, 76, 60, 0.1)',
                         tension: 0.3
@@ -3466,7 +3471,7 @@
             const loadingCtx = document.getElementById('loading-chart').getContext('2d');
             new Chart(loadingCtx, {
                 type: 'bar',
-                data: {
+                 {
                     labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
                     datasets: [{
                         label: '% Loading',
@@ -3489,10 +3494,10 @@
             const breakdownCtx = document.getElementById('revenue-breakdown-chart').getContext('2d');
             new Chart(breakdownCtx, {
                 type: 'pie',
-                data: {
+                 {
                     labels: ['Domestic', 'International', 'Express', 'Special'],
                     datasets: [{
-                        data: [45, 30, 15, 10],
+                         [45, 30, 15, 10],
                         backgroundColor: ['#e74c3c', '#3498db', '#2ecc71', '#f39c12']
                     }]
                 },
@@ -3906,7 +3911,7 @@
                 await updateFile(
                     FILE_PATHS.CHAT,
                     'New chat message',
-                    btoa(JSON.stringify(chat, null, 2))
+                    utf8ToBase64(JSON.stringify(chat, null, 2))
                 );
                 
                 // Update local state and UI
