--- a/index.html
+++ b/index.html
@@ -2210,7 +2210,7 @@
                 // Set up periodic checks
                 setInterval(checkExpirations, 300000); // Check every 5 minutes
             } catch (error) {
-                addNotification('Failed to load  ' + error.message, 'error');
+                addNotification('Failed to load ' + error.message, 'error');
                 console.error('Load data error:', error);
             }
         }
@@ -3480,7 +3480,7 @@
                     labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
                     datasets: [{
                         label: 'Revenue',
-                         [12000, 19000, 15000, 20000, 25000, 30000, 35000, 40000, 38000, 36000, 32000, 45000],
+                        data: [12000, 19000, 15000, 20000, 25000, 30000, 35000, 40000, 38000, 36000, 32000, 45000],
                         borderColor: '#e74c3c',
                         backgroundColor: 'rgba(231, 76, 60, 0.1)',
                         tension: 0.3
